<resources>
    <string name="app_name">Todo APP</string>
    <string name="var1">ini pesan</string>
    <string name="tLoginAkun">LOGIN</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail">Email: </string>
    <string name="tPassword">Password: </string>
    <string name="bSignin">Sign-In</string>
    <string name="txEmail">Ini Hasil Email</string>
    <string name="txPassword">Ini Hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="Idaftar">Daftar</string>
    <string name="enama">Masukan Nama</string>
    <string name="eemail">Masukan Email</string>
    <string name="epass">Masukan Password</string>
    <string name="erepass">Masukan Password Kembali</string>
    <string name="ealamat">Masukan Alamat</string>
    <string name="fabsimpan">Klik</string>
    <string name="tTulis">welcome</string>
</resources>